Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-05-02
----------
- Fixed bug with monster blows, as suggested by pelpel. (parody)

2002-04-30
----------
- Fixed up lots of the save code, thanks pelpel. (takkaria)
- Added pelpel's equippy chars patch; they are now an option. (takkaria)
- Applied pelpel's main-xaw.c patch. (takkaria)
- Changed referances to 'lite', to 'light'. (parody)
- Added some belts. (parody)

2002-04-29
----------
- Made p_ptr->history a single [250], instead of [4][60]. (takkaria)

2002-04-28
----------
- Many fixes from pelpel.  Character now load, even if they are very
  messed up. (takkaria)
- Twiddled with object recall.  Not quite perfect in relation to the
  new stat code. (takkaria)
- Added a basic monster kill count. (parody)

2002-04-27
----------
- Efficientised the o_ptr->note code.  It now reads/writes a byte for
  whether there is a "note" record.  If there is, it reads/writes it.
  Combined the code for saving/loading here properly too. (takkaria)
- Fixed some silly, silly bugs, such as not reading in blocks. (!!!)
  (ajps)

Between 2002-04-21 and 2002-04-27
---------------------------------
- Merged the saving and loading code.  Broken.
- Still broken after a few days debugging.
- Made some code much more efficient.
- Moved the stat bonuses from the pval to their own arrayed variable.

2002-04-21
----------
- Finished off the new savefile saving code; fixed many bugs, segmentation
  faults.  Thanks to Antimatter, sfuerst, Kieron, Qlzqqlzup, Varitek on
  #angband. (takkaria)
- New makefile.std --> cygwin is incroporated into it now.

2002-04-06
----------
- Instead of being capped at 1600, many monster breaths are now capped
  at their dungeon level * 10. Suggested by JLE and Nathan Mahon.
  (takkaria)

2002-04-01
----------
- Finished off the object recall && started adding the character dump
  version. (takkaria)
- Written a (hopefully) better screen output hook. (ajps)